src/objects/DOZISF__Complete_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DOZISF__Account_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__Lead_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Complete Setting</label>
</CustomObject>